// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Federal 2025 Constants Configuration Snapshots should match HOH brackets snapshot 1`] = `
[
  {
    "rate": 0.1,
    "upTo": 17000,
  },
  {
    "rate": 0.12,
    "upTo": 64850,
  },
  {
    "rate": 0.22,
    "upTo": 103350,
  },
  {
    "rate": 0.24,
    "upTo": 197300,
  },
  {
    "rate": 0.32,
    "upTo": 250500,
  },
  {
    "rate": 0.35,
    "upTo": 626350,
  },
  {
    "rate": 0.37,
    "upTo": null,
  },
]
`;

exports[`Federal 2025 Constants Configuration Snapshots should match MFJ brackets snapshot 1`] = `
[
  {
    "rate": 0.1,
    "upTo": 23850,
  },
  {
    "rate": 0.12,
    "upTo": 96950,
  },
  {
    "rate": 0.22,
    "upTo": 206700,
  },
  {
    "rate": 0.24,
    "upTo": 394600,
  },
  {
    "rate": 0.32,
    "upTo": 501050,
  },
  {
    "rate": 0.35,
    "upTo": 751600,
  },
  {
    "rate": 0.37,
    "upTo": null,
  },
]
`;

exports[`Federal 2025 Constants Configuration Snapshots should match Single brackets snapshot 1`] = `
[
  {
    "rate": 0.1,
    "upTo": 11925,
  },
  {
    "rate": 0.12,
    "upTo": 48475,
  },
  {
    "rate": 0.22,
    "upTo": 103350,
  },
  {
    "rate": 0.24,
    "upTo": 197300,
  },
  {
    "rate": 0.32,
    "upTo": 250525,
  },
  {
    "rate": 0.35,
    "upTo": 626350,
  },
  {
    "rate": 0.37,
    "upTo": null,
  },
]
`;

exports[`Federal 2025 Constants Configuration Snapshots should match additional standard deduction snapshot 1`] = `
{
  "marriedJointPerEligible": 1600,
  "unmarriedPerEligible": 2000,
}
`;

exports[`Federal 2025 Constants Configuration Snapshots should match complete federal config snapshot 1`] = `
{
  "additionalStandardDeduction": {
    "marriedJointPerEligible": 1600,
    "unmarriedPerEligible": 2000,
  },
  "brackets": {
    "head": [
      {
        "rate": 0.1,
        "upTo": 17000,
      },
      {
        "rate": 0.12,
        "upTo": 64850,
      },
      {
        "rate": 0.22,
        "upTo": 103350,
      },
      {
        "rate": 0.24,
        "upTo": 197300,
      },
      {
        "rate": 0.32,
        "upTo": 250500,
      },
      {
        "rate": 0.35,
        "upTo": 626350,
      },
      {
        "rate": 0.37,
        "upTo": null,
      },
    ],
    "married_joint": [
      {
        "rate": 0.1,
        "upTo": 23850,
      },
      {
        "rate": 0.12,
        "upTo": 96950,
      },
      {
        "rate": 0.22,
        "upTo": 206700,
      },
      {
        "rate": 0.24,
        "upTo": 394600,
      },
      {
        "rate": 0.32,
        "upTo": 501050,
      },
      {
        "rate": 0.35,
        "upTo": 751600,
      },
      {
        "rate": 0.37,
        "upTo": null,
      },
    ],
    "single": [
      {
        "rate": 0.1,
        "upTo": 11925,
      },
      {
        "rate": 0.12,
        "upTo": 48475,
      },
      {
        "rate": 0.22,
        "upTo": 103350,
      },
      {
        "rate": 0.24,
        "upTo": 197300,
      },
      {
        "rate": 0.32,
        "upTo": 250525,
      },
      {
        "rate": 0.35,
        "upTo": 626350,
      },
      {
        "rate": 0.37,
        "upTo": null,
      },
    ],
  },
  "constantsVersion": "2025.IRS.v1",
  "notes": "Official 2025 inflation-adjusted values from IRS Revenue Procedure 2024-40. Standard deductions and brackets are indexed for inflation annually. Additional standard deduction applies per eligible person (age 65+ or blind).",
  "sources": [
    "https://www.irs.gov/pub/irs-drop/rp-24-40.pdf",
    "https://www.irs.gov/forms-pubs/about-form-1040",
    "https://www.irs.gov/publications/p501",
  ],
  "standardDeduction": {
    "head": 22500,
    "married_joint": 30000,
    "single": 15000,
  },
}
`;

exports[`Federal 2025 Constants Configuration Snapshots should match standard deduction snapshot 1`] = `
{
  "head": 22500,
  "married_joint": 30000,
  "single": 15000,
}
`;
